use 1.3.5 snapshot
Signed-off-by: Sergei Malafeev <sergeymalafeev@gmail.com>